added empty.html to ha a common style for empty submenus start refactor education (far from done)

--- a/kooplexhub/container/templates/container_list.html
+++ b/kooplexhub/container/templates/container_list.html
@@ -15,9 +15,7 @@
     {% endfor %}
     </div>
   {% else %}
-    <div class="alert alert-warning" role="warning">
-      <p>{{ empty }}</p>
-    </div>
+    {% include 'empty.html' %}
   {% endif %}
 {% endblock %}
 
