--- a/kooplexhub/project/templates/project_list.html
+++ b/kooplexhub/project/templates/project_list.html
@@ -16,11 +16,7 @@
     {% endfor %}
   </div>
 {% else %}
-  <div class="alert alert-warning" role="warning">
-    <p>You have not visible projects yet. 
-      <a href="{% url 'project:new' %}"><i class="bi bi-bag-plus"></i><span>&nbsp;Create one now...</span></a>. 
-    </p>
-  </div>
+  {% include 'empty.html' %}
 {% endif %}
 {% endblock %}
 
