--- a/kooplexhub/education/templates/assignment.html
+++ b/kooplexhub/education/templates/assignment.html
@@ -1,65 +1,54 @@
-{% extends "layout.html" %}
+{% extends "education_layout.html" %}
 {% load render_table from django_tables2 %}
 
 {% load static %}
+
 
 {% block css_extra %}
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap-datetimepicker-master/css/bootstrap-datetimepicker.min.css' %}">
 {% endblock %}
 
+{% block head_content %}
+<style>
+  @media all and (min-width: 991px) {
+    .go{ display: none; }
+  }
 
-{% block submenu %}
-{% include 'education_submenu.html' with title="Education" submenu="assignment" %}
+  .mytab{
+    color: rgb(196, 196, 196);
+  }
+  .mytab:hover{
+    color: rgb(196, 196, 196);
+    font-weight: bolder;
+  }
+  .mytab.active {
+    font-weight: bolder;
+  }
+  
+  </style>
 {% endblock %}
 
 
 {% block chardinhelp %}
-<link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
-<script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
-<script>
-   (function() {
-     $(function() {
-       $('body').chardinJs({
-         'attribute': 'data-intro',
          url: "{% static 'chardinjs/help_assignment.json' %}"
-       });
-   
-       // or trigger via an anchor tag
-       $('a[data-toggle="chardinjs"]').on('click', function (e) {
-         e.preventDefault();
-         $("div.envcard:first").find(".collapse").addClass('show');
-         return ($('body').data('chardinJs')).toggle();
-       });
-   
-         return $('body').on('chardinJs:stop', function () {
-         //$("div.envcard:first").find(".collapse").removeClass('show');
-
-       });
-
-     });
-   }).call(this);
-</script>
 {% endblock %}
 
-
-
-{% block main_content_right %}
-
+{% block realcontent %}
 <ul class="nav nav-tabs  mb-2 mt-3" id="assignmentTeacherTabs" role="tablist">
-  <li class="nav-item" role="presentation">
-    <button class="nav-link {% if active_tab == "tab-new" %}active{% endif %}" id="tab-new" data-bs-toggle="tab" data-bs-target="#newAssignment" type="button" role="tab" aria-controls="newAssignment" aria-selected="{% if active_tab == "tab-new" %}true{% else %}false{% endif %}">New Assignment</button>
+  <li class="nav-item" role="presentation" data-intro="#newassignmentarea">
+    <button class="nav-link mytab {% if active_tab == "tab-new" %}active{% endif %}" id="tab-new" data-bs-toggle="tab" data-bs-target="#newAssignment" type="button" role="tab" aria-controls="newAssignment" aria-selected="{% if active_tab == "tab-new" %}true{% else %}false{% endif %}">New Assignment</button>
   </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link {% if active_tab == "tab-conf" %}active{% endif %}" id="tab-conf" data-bs-toggle="tab" data-bs-target="#confAssignment" type="button" role="tab" aria-controls="confAssignment" aria-selected="{% if active_tab == "tab-conf" %}true{% else %}false{% endif %}">Configure Assignment</button>
+  <li class="nav-item" role="presentation" data-intro="#configureassignmentarea">
+    <button class="nav-link mytab {% if active_tab == "tab-conf" %}active{% endif %}" id="tab-conf" data-bs-toggle="tab" data-bs-target="#confAssignment" type="button" role="tab" aria-controls="confAssignment" aria-selected="{% if active_tab == "tab-conf" %}true{% else %}false{% endif %}">Configure Assignment</button>
   </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link {% if active_tab == "tab-handlemass" %}active{% endif %}" id="tab-handlemass" data-bs-toggle="tab" data-bs-target="#AssignmentMass" type="button" role="tab" aria-controls="AssignmentMass" aria-selected="{% if active_tab == "tab-handlemass" %}true{% else %}false{% endif %}">Mass Assignments</button>
+  <li class="nav-item" role="presentation" data-intro="#massassignmentarea">
+    <button class="nav-link mytab {% if active_tab == "tab-handlemass" %}active{% endif %}" id="tab-handlemass" data-bs-toggle="tab" data-bs-target="#AssignmentMass" type="button" role="tab" aria-controls="AssignmentMass" aria-selected="{% if active_tab == "tab-handlemass" %}true{% else %}false{% endif %}">Mass Assignments</button>
   </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link {% if active_tab == "tab-handle" %}active{% endif %}" id="tab-handle" data-bs-toggle="tab" data-bs-target="#Assignment" type="button" role="tab" aria-controls="Assignment" aria-selected="{% if active_tab == "tab-handle" %}true{% else %}false{% endif %}">Handle Assignments</button>
+  <li class="nav-item" role="presentation" data-intro="#handleassignmentarea">
+    <button class="nav-link mytab {% if active_tab == "tab-handle" %}active{% endif %}" id="tab-handle" data-bs-toggle="tab" data-bs-target="#Assignment" type="button" role="tab" aria-controls="Assignment" aria-selected="{% if active_tab == "tab-handle" %}true{% else %}false{% endif %}">Handle Assignments</button>
   </li>
-  <li class="nav-item" role="presentation">
-    <button class="nav-link {% if active_tab == "tab-summary" %}active{% endif %}" id="tab-summary" data-bs-toggle="tab" data-bs-target="#summary" type="button" role="tab" aria-controls="summary" aria-selected="{% if active_tab == "tab-summary" %}true{% else %}false{% endif %}">Summary of courses</button>
+  <li class="nav-item" role="presentation" data-intro="#summaryofcoursesarea">
+    <button class="nav-link mytab {% if active_tab == "tab-summary" %}active{% endif %}" id="tab-summary" data-bs-toggle="tab" data-bs-target="#summary" type="button" role="tab" aria-controls="summary" aria-selected="{% if active_tab == "tab-summary" %}true{% else %}false{% endif %}">Student points</button>
   </li>
 </ul>
 
@@ -105,13 +94,17 @@
   {# Configure #}
   <div class="tab-pane fade {% if active_tab == "tab-conf" %}show active{% endif %}" id="confAssignment" role="tabpanel" aria-labelledby="tab-conf">
     <div class="mt-3">
-      <h4 style="margin-bottom: 0px;">Configure or delete assignments</h4>
+
       {% if t_assignment_config.data|length > 0 %}
       {%endif %}
       <form id='assignment-form-configure' class="mt-3" action="{% url 'education:configureassignment' %}" method="post">
+       <div class="d-flex flex-row mb-3">
+        <h4 style="width: 100%;">Configure or delete assignments</h4>
+        {% include 'save_apply_cancel.html' %}
+      </div>
         {% csrf_token %}
-        <input data-intro="#configureassignmentsearch" class="form-control mb-3" style="margin-top: -10px;" type="text" id="search_configure" placeholder="Search course or assignment" title="Type in a name" autofocus>
-        <div data-intro="#configureassignmentarea">
+        <input class="form-control mb-3" style="margin-top: -10px;" type="text" id="search_configure" placeholder="Search course or assignment" title="Type in a name" autofocus>
+        <div>
         {% render_table t_assignment_config %}
         {% if t_assignment_config.data|length > 0 %}
           {% include 'apply_cancel.html' with hide_cancel=True %}
@@ -119,14 +112,19 @@
       </div>
       </form>
     </div>
+
+
   </div>
 
   {# Mass Assignments #}
   <div class="tab-pane fade {% if active_tab == "tab-handlemass" %}show active{% endif %}" id="AssignmentMass" role="tabpanel" aria-labelledby="tab-handlemass">
     <div class="mt-3">
-      <h5>Mass operation</h5>
       {% if t_mass_all %}
         <form id='assignment-form-mass-all' class="row mb-3 mt-3" action="{% url 'education:handle_mass_many' %}" method="post">
+          <div class="d-flex flex-row mb-2">
+            <h4 style="width: 100%;">Mass operation</h4>
+            {% include 'save_apply_cancel.html' %}
+          </div>
           {% csrf_token %}
           {% render_table t_mass_all %}
           <div style="justify-content: end;">
@@ -143,24 +141,24 @@
   <div class="tab-pane fade {% if active_tab == "tab-handle" %}show active{% endif %}" id="Assignment" role="tabpanel" aria-labelledby="tab-handle">
     <div class="mt-3">
       {% if d_course_assignments|length > 0 %}
-        <h4 style="margin-bottom: 0px;">Select an assignment to handle</h4>
         <form id='assignment-form-handle' style="margin-top: -8px;" class="mt-1 mb-4" action="{% url 'education:assignment_teacher' %}" method="post">
+            <h4>Select an assignment to handle</h4>
           {% csrf_token %}
           <div class="mb-2 mt-2">
             <select class="form-select" id="assignment_selected" name="assignment_selected" autofocus>
               {% for c_id, ass in d_course_assignments.items %}
                 {% with ass|first as a0 %}
-                <optgroup label="{{ a0.course.name }} ({{ a0.course.folder }})"> 
+                <optgroup label="-- {{ a0.course.name }} ({{ a0.course.folder }}) -- "> 
                 {% endwith %}
                 {% for a in ass %}
                   <option class="dropdown-item" value="{{ a.id }}"
-                    {% if a.id == assignment_id %} selected {% endif %}
+                    {% if c.id == courses %} selected {% endif %}
                   >{{ a.name }} ({{ a.folder }})</option>
                 {% endfor %}
                 </optgroup>
               {% endfor %}
             </select>
-            <div style="display: none" id="operationPanelRefresh" class="alert alert-warning">
+            <div style="display: none; margin-top: 10px" id="operationPanelRefresh" class="alert alert-warning">
               <h6>Refresh</h6>
               <p>You selected a different assignment than the previous. Please use the Filter button to refresh the content. Any unapplied changes will be lost.</p>
               <input type="submit" class="btn btn-primary ml-2" value="Filter">
@@ -172,20 +170,22 @@
       {% endif %}
       <div id="operationPanel">
       {% if assignment_id %}
-        <h5>Mass operation</h5>
+      <div class="d-flex flex-row mb-2">
+        <h4 style="width: 100%;">Mass operation</h4>
+        {% include 'apply_cancel.html' with hide_cancel=True %}
+      </div>
         <form id='assignment-form-mass' class="row mb-3 mt-3" action="{% url 'education:handle_mass' %}" method="post">
           {% csrf_token %}
           <input type="hidden" name="assignment" value="{{assignment_id}}" id="assignment_id">
           {% render_table t_mass %}
-          <div style="justify-content: end;">
-          {% include 'apply_cancel.html' with hide_cancel=True %}
-        </div>
+    
         </form>
-        <div class="mt-4">
-          <h5>Individual operation</h5>
-        </div>
-        <input class="form-control me-2 mb-3 mt-3" type="text" id="search_student" placeholder="Search student by name or username" title="Type in a name">
         <form  id='assignment-form-individual' class="mb-3 mt-3" action="{% url 'education:handleassigment' %}" method="post">
+          <div class="d-flex flex-row mb-2">
+            <h4 style="width: 100%;">Individual operation</h4>
+              {% include 'save_apply_cancel.html' %}
+              </div>
+              <input class="form-control me-2 mb-3 mt-3" type="text" id="search_student" placeholder="Search student by name or username" title="Type in a name">
           {% csrf_token %}
           <input type="hidden" name="assignment" value="{{assignment_id}}" >
           {% render_table t_assignments %}
@@ -198,15 +198,29 @@
 
   {# Summary #}
   <div class="tab-pane fade {% if active_tab == "tab-summary" %}show active{% endif %}" id="summary" role="tabpanel" aria-labelledby="tab-summary">
-    <h4 class="mt-3">Summary of courses</h4>
-    {% if t_assignment_summary %}
-      {#% render_table t_assignment_summary %#}
-      {% for t in  ts %}
+    {% if d_course_assignments|length > 0 %}
+    <h4 class="mt-3">Student points</h4>
+    <select class="form-select" id="summary_course_selected" name="summary_course_selected" autofocus>
+              <optgroup label="-- Select course --"></optgroup>
+              {% for c_id, ass in d_course_assignments.items %}
+                {% with ass|first as a0 %}
+                <option value="{{ a0.course.id }}"> 
+                {{ a0.course.name }}
+                </option>               
+                 {% endwith %}
+              {% endfor %}
+            </select>
+            {% else %}
+            <div class="alert alert-warning">You need to define assignment(s) for courses before you can check student status.</div>
+          {% endif %}
+          <form id='student-grade' class="mb-3 mt-3">
+            <input type="hidden" name="assignment" value="{{assignment_id}}" >
+      {% for c_id, t in  ts.items %}
+      <div id="st-{{c_id}}">
       {{ t }}
+      </div>
       {% endfor %}
-    {% else %}
-      missing table assignment summary
-    {% endif %}
+    </form>
   </div>
 </div>
 
@@ -215,6 +229,19 @@
 
 
 <script>
+$("#summary_course_selected").change(function() {
+  var sel_id = $( this ).val();
+  console.log( "summary course changed to " + sel_id );
+  $('[id^=st-]').each(function() {
+    var myid = $(this).attr("id").split('-')[1]
+    console.log( "checking " + myid );
+    if (myid == sel_id) {
+      $( this ).show();
+    } else {
+      $( this ).hide();
+    }
+  });
+}).change();
 $("#assignmentTeacherTabs>li>button").on("click", function () {
   var tab = $( this ).attr("id");
   $.cookie("active_tab", tab, { 'path': '/', 'secure': true });
@@ -266,7 +293,10 @@ $("#course_selected").change(function () {
 }).change();
 
 $("#assignment_selected").change(function() {
-  if ( $( "#assignment_id" ).val() == $( this ).val() ) {
+  var sel_id = $( this ).val();
+  console.log( "changed to " + sel_id );
+  $.cookie("handle_assignment_last", sel_id, { 'path': '/', 'secure': true })
+  if ( $( "#assignment_id" ).val() == sel_id ) {
     $( "#operationPanelRefresh" ).hide();
     $( "#operationPanel" ).show();
     console.log( "show assignment handler" );
