--- a/kooplexhub/education/templates/assignment_student.html
+++ b/kooplexhub/education/templates/assignment_student.html
@@ -1,73 +1,22 @@
-{% extends "layout.html" %}
-
-
+{% extends "education_layout.html" %}
 
 {% load render_table from django_tables2 %}
-
-{% block submenu %}
-{% include 'education_submenu.html' with title="Education" submenu="assignment" %}
-{% endblock %}
-
 {% load static %}
 
 {% block chardinhelp %}
-<link type="text/css" href="{% static 'chardinjs/chardinjs.css' %}" rel="stylesheet">
-<script src="{% static 'chardinjs/chardinjs.js' %}" type="text/javascript"></script>
-<script>
-   (function() {
-     $(function() {
-       $('body').chardinJs({
-         'attribute': 'data-intro',
          url: "{% static 'chardinjs/assignmentdue.json' %}"
-       });
-   
-       // or trigger via an anchor tag
-       $('a[data-toggle="chardinjs"]').on('click', function (e) {
-         e.preventDefault();
-         $("div.envcard:first").find(".collapse").addClass('show');
-         return ($('body').data('chardinJs')).toggle();
-       });
-   
-         return $('body').on('chardinJs:stop', function () {
-         //$("div.envcard:first").find(".collapse").removeClass('show');
-
-       });
-
-     });
-   }).call(this);
-</script>
 {% endblock %}
 
-
-{% block main_content_right %}
-
-
-<div class="mt-2 mb-2" data-intro="#assignment_due">
-  <h6>Your assignments due</h6>
-</div>
-  {% if t_submit.rows %}
-    <form id="assignments-submitform" class="form-horizontal was-validated" action="{% url 'education:submit' %}" method="post">
-      
-      {% csrf_token %}
-      {% render_table t_submit %}
-      {% include 'apply_cancel.html' %}
-    </form>
-  {% endif %}
-
+{% block realcontent %}
+{% if t_submit.rows %}
+  <form id="assignments-submitform" class="form-horizontal was-validated" action="{% url 'education:submit' %}" method="post">
+    <div class="mb-2">{% include 'save_apply_cancel.html' %}</div>
+    {% csrf_token %}
+    {% render_table t_submit %}
+    {% include 'apply_cancel.html' %}
+  </form>
+  {% else %}
+   {% include 'empty.html' %}
+  </div>
+{% endif %}
 {% endblock %}
-
-
-{% comment %}
-{% block navsearch %}
-<form class="d-flex" action="{% url 'education:search' usercoursebinding_id %}" method="get">
-  {#% csrf_token %#}
-  <input type="hidden" id="s_assignment_config" value="{{ user.profile.search_education_assignment_config }}">
-  <input type="hidden" id="s_assignment_mass" value="{{ user.profile.search_education_assignment_mass }}">
-  <input type="hidden" id="s_assignment_individual" value="{{ user.profile.search_education_assignment_individual }}">
-  <input class="form-control me-2" type="search" id="search_field" name="pattern"
-      value="" placeholder="Search" disabled
-      aria-label="Search">
-  <button class="btn btn-outline-secondary" type="submit" name="button" value="search">Search</button>
-</form>
-{% endblock %}
-{% endcomment %}
