--- a/kooplexhub/education/templates/course_partial_list.html
+++ b/kooplexhub/education/templates/course_partial_list.html
@@ -1,23 +1,34 @@
 
-{% load buttons %}
+{% load container_buttons %}
+{% load check_show %}
+{% load extras %}
 
 
-<div class="card bg-light border-info shadow mb-3 mt-3 search" id="{{ course.name }}" data-intro="#list_courses">
-  <div class="card-header" style="background-color:initial" onpointerenter="this.setAttribute('style', 'background-color: white')" onpointerleave="this.setAttribute('style', 'background-color: initial')">
-    <div class="row" style="color: black" onpointerenter="this.setAttribute('style', 'font-weight: bold')" onpointerleave="this.setAttribute('style', 'color: black')">
-     <div data-bs-toggle="collapse" data-bs-target="#collapse-{{ course.id }}" class="col-11" aria-expanded="false" aria-controls="collapse-{{ course.id }}" style="cursor: pointer; display: flex; flex-wrap: wrap; justify-content: space-between">
-      <div style="display:flex">
-      <div>
-        {% dropdown_start_open_stop bindings=coursecontainerbindings ancestor=course ancestor_type='course' next_page=next_page %}
-      </div>  
-      <div style="margin-left: 10px">{{ course.name }}</div>
-    </div>
-        <div class="float-end">
-          <span class="badge rounded-pill bg-secondary"><i class="ri-image-2-line"></i>{{ course.image }}</span>
+<style>
+    @media all and (max-width: 1265px) {
+      .thespace{ margin-top: 8px; }
+    }    
+</style>
+
+<div class="card bg-light border-secondary shadow mb-3" id="card-{{ course.id }}">
+  <div class="card-header">
+    <div class="container-fluid">
+      <div class="d-flex flex-row">
+        <div class="d-flex flex-row justify-content-start" style="width:2%">
+         <div>{% dropdown_start_open_stop bindings=coursecontainerbindings ancestor=course ancestor_type='course' next_page=next_page %}</div>
         </div>
-      </div>
+	  <div class="ms-5 d-flex flex-row justify-content-between" style="cursor: pointer; width:97%" onmouseover="this.style.fontWeight='bold';" 
+    onmouseout="this.style.fontWeight='normal'"
+               data-bs-toggle="collapse" data-bs-target="#collapse-{{ course.id }}" aria-expanded="false" aria-controls="collapse-{{ course.id }}">
+           <div class="d-flex flex-row justify-content-start" ><span id="course-name-{{ course.id }}"><i class="bi bi-arrow-down-square-fill pe-2" style="color: green;"></i>{{ course.name }}</span></div> 
+            <div class="d-flex flex-row justify-content-end">
+		    {#<div>{% container_image container %}</div> #} {# fixme #}
+              <span class="badge rounded-pill bg-secondary"><i class="ri-image-2-line"></i>{{ course.image }}</span>
+        </div>
+	  </div>
+	</div>
     </div>
-  </div> <!-- card header -->
+  </div><!-- card header -->
   <div class="collapse" id="collapse-{{ course.id }}">
     <div class="card card-body">
       <p class="card-text"><strong>Description:</strong> {{ course.description }}</p>
