--- a/kooplexhub/container/templates/container_configure.html
+++ b/kooplexhub/container/templates/container_configure.html
@@ -63,9 +63,9 @@
   {{ form.as_table }}
           </table>
         </div>
-        <div class="d-flex ms-3 mt-3">
-          <div>
-            <p class="fw-bolder">Image description:</p>
+        <div class="d-flex ms-3 w-100 w-md-50">
+          <div class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
+            <p class="fw-bolder">Image description:&nbsp;</p>
             <p id="imageDescription"></p>
           </div>
 	{{ form.descriptions }}
